--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   --btn-background-color: #2196f3;
   --main-light-background-color: #ffffff;
   --secondary-light-background-color: #f5f4fa;
+  --hover-order-btn-color: #188ce8;
 }
 
 body {
@@ -168,6 +169,12 @@ body {
   text-align: center;
   color: var(--main-text-color-theme-dark);
   cursor: pointer;
+}
+
+.order-button:hover,
+.order-button:focus {
+  background-color: var(--hover-order-btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .features-list {
