--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,8 @@ body {
   width: 73px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: var(--main-text-color-theme-dark);
+  background-color: var(--btn-background-color);
 }
 .apps-btn {
   width: 112px;
